# code

./: .gitignore  Cargo.toml  README.md
ch_01/hello/: Cargo.toml
ch_01/minimal-tcp/: Cargo.toml
ch_01/minimal-tcp/src/: main.rs
ch_01/minimal-warp/: Cargo.toml
ch_01/minimal-warp/src/: main.rs
ch_01/minimal_reqwest/: Cargo.toml
ch_01/minimal_reqwest/src/: main.rs
ch_02/: Cargo.toml
ch_02/minimal-hyper-http/: Cargo.toml
ch_02/minimal-hyper-http/src/: main.rs
ch_02/minimal-tcp/: Cargo.toml
ch_02/minimal-tcp/src/: main.rs
ch_02/minimal-tokio-tcp/: Cargo.toml
ch_02/minimal-tokio-tcp/src/: main.rs
ch_02/minimal-warp/: Cargo.toml
ch_02/minimal-warp/src/: main.rs
ch_02/src/: main.rs
ch_03/: Cargo.toml
ch_03/src/: main.rs
ch_04/ch_04-s4.1.2/: Cargo.toml  question.json
ch_04/ch_04-s4.1.2/src/: main.rs
ch_04/final/: Cargo.toml
ch_04/final/src/: main.rs
ch_04/src/: main.rs
ch_05/: Cargo.toml
ch_05/handle-errors/src/: lib.rs
ch_05/src/: main.rs  store.rs
ch_05/src/routes/: answer.rs  mod.rs  question.rs
ch_05/src/types/: answer.rs  pagination.rs  question.rs
ch_05/src/types/routes/: question.rs
ch_06/: Cargo.toml
ch_06/src/: main.rs  store.rs
ch_06/src/routes/: answer.rs  question.rs
ch_06/src/types/: pagination.rs
ch_07/: Cargo.toml  log4rs.yaml  questions.json  rustfmt.toml
ch_07/handle-errors/: Cargo.toml
ch_07/handle-errors/src/: lib.rs
ch_07/migrations/: 20220116194720_create_questions.sql  20220514145724_answers_table.up.sql
ch_07/src/: main.rs  store.rs
ch_07/src/routes/: answer.rs  question.rs
ch_07/src/types/: answer.rs  mod.rs  pagination.rs  question.rs
ch_08/: Cargo.toml
ch_08/handle-errors/: Cargo.toml
ch_08/src/: main.rs  profanity.rs  store.rs
ch_08/src/routes/: answer.rs  question.rs
ch_08/src/types/: pagination.rs
ch_09/: Cargo.toml
ch_09/handle-errors/: Cargo.toml
ch_09/handle-errors/src/: lib.rs
ch_09/migrations/: 20220116194720_create_questions.sql  20220201130837_create_answers.sql  20220328090805_add_accounts_table.sql  20220509150516_questions_table.down.sql  20220523174842_create_accounts_table.down.sql  20220523175821_extend_answers_table.down.sql
ch_09/src/: main.rs  profanity.rs  store.rs
ch_09/src/routes/: answer.rs  authentication.rs  question.rs
ch_09/src/types/: account.rs  answer.rs  pagination.rs  question.rs
ch_10/: Cargo.toml  Dockerfile  build.rs
ch_10/handle-errors/: Cargo.toml
ch_10/handle-errors/src/: lib.rs
ch_10/migrations/: 20220408182404_extend_answers_table.sql  20220514145724_answers_table.down.sql  20220523174842_create_accounts_table.up.sql  20220523175814_extend_questions_table.down.sql
ch_10/src/: config.rs  main.rs  profanity.rs  store.rs
ch_10/src/routes/: answer.rs  authentication.rs  question.rs
ch_11/: Cargo.toml  build.rs  docker-compose.yml
ch_11/handle-errors/: Cargo.toml
ch_11/handle-errors/src/: lib.rs
ch_11/integration-tests/: Cargo.toml
ch_11/integration-tests/src/: main.rs
ch_11/migrations/: 20220408182019_extend_questions_table.sql  20220523175814_extend_questions_table.up.sql
ch_11/mock-server/: Cargo.toml
ch_11/mock-server/src/: lib.rs
ch_11/src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
ch_11/src/routes/: authentication.rs  mod.rs
ch_11/src/types/: account.rs  mod.rs  pagination.rs
src/: error.rs  main.rs  store.rs
src/routes/: answer.rs  mod.rs  question.rs
src/types/: answer.rs  mod.rs  pagination.rs  question.rs
