[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"


[dependencies]
rust-web-dev = { path = "../",  version = "1.0.0" }
dotenv = "0.15.0"
tokio = { version = "1.1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
